--- a/ZTW_2011/app/views/layouts/application.html.erb
+++ b/ZTW_2011/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ZTW2011</title>
+  <title>Pizzeria</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+  <%= render "menu" %>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
