Wstepne rozpoznanie mechanizmu templatowania, strona glowa (defaultowa strona teraz pod status.html jest)

--- a/ZTW_2011/app/views/layouts/application.html.erb
+++ b/ZTW_2011/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <%= render "menu" %>
+  <%= render "shared/menu" %> <!-- ta sciezka jest wzgledna do 'views' -->
 
   <%= yield %>
 
