--- a/ZTW_2011/app/views/shared/_menu.erb
+++ b/ZTW_2011/app/views/shared/_menu.erb
@@ -1,7 +1,7 @@
 <ul class="menu">
   <li><%= link_to "Strona główna", "/"%> </li>
-  <li><%= link_to "Menu", "recipes" %> </li>
-  <li><%= link_to "Nowe zamówienie", "orders/new" %> </li>
-  <li><%= link_to "Kontakt", "kontakt" %></li>
+  <li><%= link_to "Menu", "/recipes" %> </li>
+  <li><%= link_to "Nowe zamówienie", "/orders/new" %> </li>
+  <li><%= link_to "Kontakt", "/kontakt" %></li>
   <%  %>
 </ul>
