--- a/ZTW_2011/app/views/users/_form.html.erb
+++ b/ZTW_2011/app/views/users/_form.html.erb
@@ -17,7 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation   %><br />
+    <%= f.password_field :password_confirmation %>
   </div>
   <div class="field">
     <%= f.label :firstName %><br />
@@ -33,11 +37,11 @@
   </div>
   <div class="field">
     <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
+    <%= f.phone_field :phone %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.email_field :email %>
   </div>
   <div class="actions">
     <%= f.submit %>
