Bladositto - pierwszy commit 	modified:   app/controllers/application_controller.rb 	dodana zmienna globalna trzymajaca wszystkie przepisy 	modified:   app/controllers/orders_controller.rb 	zmodyfikowana orders#new 	modified:   app/controllers/pizzas_controller.rb 	modified:   app/controllers/recipes_controller.rb	zmodyfikowana orders#index 	modified:   app/views/layouts/application.html.erb	nowy tymczasowy layout 	modified:   app/views/orders/new.html.erb 	new file:   app/views/pizzas/fake_new.html.erb 	modified:   app/views/recipes/index.html.erb 	new file:   app/views/shared/_recipies_menu.html.erb	templatowe menu z przepisami 	modified:   config/routes.rb				dodane odpowiednie route'y 	new file:   "db\\PizzeriaDev.db" 	modified:   public/stylesheets/main.css			ustawione style do nowego layoutu 	deleted:    public/stylesheets/scaffold.css

--- a/ZTW_2011/app/views/layouts/application.html.erb
+++ b/ZTW_2011/app/views/layouts/application.html.erb
@@ -7,20 +7,26 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <% if controller.user_logged?  %>
-    <%= "Zalogowany: " %>
-    <%= controller.logged_user.login %>
-    <%= link_to "Wyloguj się", "/logout" %>
-  <% else %>
-    <%= link_to "Zaloguj się", "/login"%>
-    <%= link_to "Zarejestruj się", new_user_path %>
-  <% end %>
-  
-  <%= render "shared/menu" %>
-
-  <%= yield %>
-
-  
-
+		<div id="header">
+			<% if controller.user_logged?  %>
+				<%= "Zalogowany: " %>
+				<%= controller.logged_user.login %>
+				<%= link_to "Wyloguj się", "/logout" %>
+			<% else %>
+				<%= link_to "Zaloguj się", "/login"%>
+				<%= link_to "Zarejestruj się", new_user_path %>
+			<% end %>
+			<%= render "shared/menu" %>
+		</div>
+		<div id="header_line"/></div>
+		<div id="content_wrapper">
+			<div id="content">
+				<%= yield %>
+				
+			</div>
+		</div>
+		<div id="footer">
+			<div id="footer_line"/></div>
+		</div>
 </body>
 </html>
