--- a/ZTW_2011/app/views/orders/new.html.erb
+++ b/ZTW_2011/app/views/orders/new.html.erb
@@ -1,5 +1,37 @@
 <h1>New order</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', orders_path %>
+<div class="section" style="padding-top: 10px; text-align: center; font-size: 20px; font-weight: bold;">
+<%= link_to('Next step', :controller => 'orders', :action => 'confirm') %>
+</div>
+<div class="section" style="width: 350px; float: left">
+	<%= render "shared/recipies_menu" %>
+</div>
+<div class="section" style="width: 350px; float: right">
+	<h2>Ordered pizzas</h2>
+	<small><%= link_to('clear list', :controller => 'orders', :action => 'new', :command => 'clear') %></small>
+	<ul class="highlighted_list">
+		<% index = 0 %>
+		<% @pizzas.each do |pizza| %>
+			<li>
+				<table style="width: 100%">
+					<tbody>
+						<tr>
+							<td style="font-weight: bold; font-size: 14px;"><%= pizza.recipe.name %></td>
+							<td rowspan="2"></td>
+						</tr>
+						<tr>
+							<td style="font-style: italic; font-size: 11px; width: 60%;"> <b>Składniki:</b>
+							<% pizza.recipe.ingredients.each do |ingredient| %>
+								<%= ingredient.name %>,
+							<% end %>
+							</td>
+							<td id="price" style="width: 20%;"><%= format_price(pizza.price) %> zł</td>
+							<td id="links" style="padding-left: 10px;  width: 20%;"> <small> <%= link_to 'Edit', edit_pizza_path(index) %> <%= link_to 'Destroy', '\\pizzas\\'+index.to_s, :confirm => 'Are you sure?', :method => :delete %> </small></td>
+						</tr>
+				
+					</tbody>
+				</table>
+			</li>
+		<% index+=1 %>
+		<% end %>
+	</ul>
+</div>
