--- a/ZTW_2011/app/views/recipes/index.html.erb
+++ b/ZTW_2011/app/views/recipes/index.html.erb
@@ -1,27 +1,6 @@
-<h1>Listing recipes</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Price</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @recipes.each do |recipe| %>
-  <tr>
-    <td><%= recipe.name %></td>
-    <td><%= recipe.description %></td>
-    <td><%= recipe.price %></td>
-    <td><%= link_to 'Show', recipe %></td>
-    <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-    <td><%= link_to 'Destroy', recipe, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Recipe', new_recipe_path %>
+<div>
+	<div class="section">
+		<%= render "shared/recipies_menu" %>
+	</div>
+	<br />
+</div>
