Usuniecie fake_new_order, poprawki linkow, zangielszczenie

--- a/ZTW_2011/app/views/layouts/application.html.erb
+++ b/ZTW_2011/app/views/layouts/application.html.erb
@@ -8,17 +8,11 @@
 </head>
 <body>
 		<div id="header">
-			<% if controller.user_logged?  %>
-				<%= "Zalogowany: " %>
-				<%= controller.logged_user.login %>
-				<%= link_to "Wyloguj się", "/logout" %>
-			<% else %>
-				<%= link_to "Zaloguj się", "/login"%>
-				<%= link_to "Zarejestruj się", new_user_path %>
-			<% end %>
+                        <%= render "shared/login_bar" %>
 			<%= render "shared/menu" %>
+                
 		</div>
-		<div id="header_line"/></div>
+                <div id="header_line"></div>
 		<div id="content_wrapper">
 			<div id="content">
 				<%= yield %>
@@ -26,7 +20,8 @@
 			</div>
 		</div>
 		<div id="footer">
-			<div id="footer_line"/></div>
-		</div>
+			<div id="footer_line"/>
+                </div>
+		
 </body>
 </html>
