--- a/ZTW_2011/app/views/root/kontakt.html.erb
+++ b/ZTW_2011/app/views/root/kontakt.html.erb
@@ -1,6 +1,6 @@
-<h2>Nasz adres</h2>
+<h2>Our Address</h2>
 <ul style >
-  <li>Ul. Długa 71</li>
-  <li>53-045 Wrocław</li>
-  <li>Tel.: 07112345678</li>
+  <li>Dluga St. 71</li>
+  <li>53-045 Wroclaw</li>
+  <li>Phone: 07112345678</li>
 </ul>
