--- a/ZTW_2011/app/views/shared/_menu.erb
+++ b/ZTW_2011/app/views/shared/_menu.erb
@@ -1,7 +1,6 @@
 <ul class="menu">
-  <li><%= link_to "Strona główna", "/"%> </li>
+  <li><%= link_to "Home", "/"%> </li>
   <li><%= link_to "Menu", recipes_path %> </li>
-  <li><%= link_to "Nowe zamówienie", new_order_path %> </li>
-  <li><%= link_to "Kontakt", "/kontakt" %></li>
-  <li><%= link_to "Tymczasowe nowe zamowienie do testowania edycji pizzy", fake_new_order_path %></li>
+  <li><%= link_to "New order", new_order_path+"?command=clear" %> </li>
+  <li><%= link_to "Contact", "/kontakt" %></li>
 </ul>
