--- a/ZTW_2011/app/views/shared/_recipies_menu.html.erb
+++ b/ZTW_2011/app/views/shared/_recipies_menu.html.erb
@@ -11,12 +11,12 @@
 						<td rowspan="2"><%= hidden_field_tag(:recipe_id, recipe.id) %></td>
 					</tr>
 					<tr>
-						<td style="font-style: italic; font-size: 11px; width: 60%;"> <b>Składniki:</b>
+						<td style="font-style: italic; font-size: 11px; width: 60%;"> <b>Ingredients:</b>
 						<% recipe.ingredients.each do |ingredient| %>
 							<%= ingredient.name %>,
 						<% end %>
 						</td>
-						<td id="price" style="width: 20%;"><%= recipe.price %> zł</td>
+						<td id="price" style="width: 20%;"><%= format_price(recipe.price) %></td>
 						<td id="links" style="padding-left: 10px;  width: 20%;"> <small> <%= submit_tag(@menu_link_text) %> </small></td>
 					</tr>
 				</tbody>
