--- a/ZTW_2011/public/stylesheets/main.css
+++ b/ZTW_2011/public/stylesheets/main.css
@@ -4,18 +4,12 @@ body, p, ol, ul, td {
   line-height: 18px;
 }
 
-
-.menu {
-    text-align: center;
-    list-style-type: none;
-    margin:0px 20px 10px
-}
-.menu li {
-   display: inline;
+.menu{
+	position: absolute;
+	bottom: 0px
 }
 
 body,html{
-	position: absolute;
 	height: 100%;
 	width: 100%;
 	padding: 0px;
@@ -23,8 +17,9 @@ body,html{
 	background-color: LightYellow;
 }
 
-div#main{
-	height: 100%;
+div{
+	position: relative;
+	width: 100%;
 }
 
 #content_wrapper{
@@ -33,47 +28,39 @@ div#main{
 	margin-left: auto;
 	margin-right: auto;
 	background-color: PaleGoldenrod;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	overflow: auto;
 }
 
 #content{
 	width: 780px;
-	height: 100%;
-	background-color: PaleGoldenrod;
 	padding: 10px 10px 10px 10px;
 	overflow: inherit;
 }
 
-#header{
-	height: 50px;
-	width: 100%;
-	background-color: #FFCC33;
+#header, #footer{
+	height: 40px;
 }
 
-#footer{
-	height: 50px;
-	width: 100%;
-	background-color: #FFCC33;
+#header_content{
+	height: 100%;
+	width: 800px;
+	margin: 0px auto 0px auto;
 }
 
-#header_line{
-	background-color: black;
-	width: 100%;
-	height: 2px;
-	bottom: 0px;
-}
-
-#footer_line{
+#header_line, #footer_line{
 	background-color: black;
 	width: 100%;
 	height: 2px;
 }
 
 .section{
-	background-color: Khaki;
-	border: 1px solid DarkKhaki;
+	background-color: khaki;
+	border: 1px solid darkkhaki;
 	padding: 0px 10px 10px 10px;
 	margin: 5px;
+	width: 748px;
 }
 
 ul.highlighted_list{
@@ -95,12 +82,27 @@ a:hover{
 	text-decoration: underline;	
 }
 
+a.menu_link{
+	float: left;
+	display: block;
+	text-decoration: none;
+	font-weight: bold;
+	text-align: center;
+	width: 120px;
+	height: 20px;
+	padding: 5px;
+}
+
+a.menu_link:hover{
+	background-color: orange;
+}
+
 input[type = submit] {
-border:none;
-background-color: transparent;
-padding: 0;
-margin: 0;
-cursor: pointer;
+	border:none;
+	background-color: transparent;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
 }
 
 input[type = submit]:hover{
