--- a/ZTW_2011/app/views/admin/users/_form.html.erb
+++ b/ZTW_2011/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, :url => user_path) do |f| %>
+<%= form_for [:admin, @user] do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+
   <div class="field">
     <%= f.label :login %><br />
     <%= f.text_field :login %>
@@ -41,6 +42,10 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :admin %><br />
+    <%= f.check_box :admin %>
   </div>
   <div class="actions">
     <%= f.submit %>
