--- a/ZTW_2011/app/views/admin/users/show.html.erb
+++ b/ZTW_2011/app/views/admin/users/show.html.erb
@@ -1,4 +1,3 @@
-<h1>My profile</h1>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -36,6 +35,11 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <b>Admin:</b>
+  <%= @user.admin %>
+</p>
 
-<%= link_to 'Edit', edit_user_path %> |
-<%= link_to 'Back', root_path %>
+
+<%= link_to 'Edit', edit_admin_user_path(@user) %> |
+<%= link_to 'Back', admin_users_path %>
