--- a/ZTW_2011/app/views/admin/recipes/_form.html.erb
+++ b/ZTW_2011/app/views/admin/recipes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@recipe) do |f| %>
+<%= form_for [:admin,@recipe] do |f| %>
   <% if @recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
