--- a/ZTW_2011/app/views/admin/recipes/show.html.erb
+++ b/ZTW_2011/app/views/admin/recipes/show.html.erb
@@ -16,5 +16,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Edit', edit_admin_recipe_path(@recipe) %> |
+<%= link_to 'Back', admin_recipes_path %>
