--- a/ZTW_2011/app/views/pizzas/index.html.erb
+++ b/ZTW_2011/app/views/pizzas/index.html.erb
@@ -1,21 +1,6 @@
-<h1>Listing pizzas</h1>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @pizzas.each do |pizza| %>
-  <tr>
-    <td><%= link_to 'Show', pizza %></td>
-    <td><%= link_to 'Edit', edit_pizza_path(pizza) %></td>
-    <td><%= link_to 'Destroy', pizza, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Pizza', new_pizza_path %>
+<div>
+	<div class="section">
+		<%= render "shared/recipies_menu" %>
+	</div>
+	<br />
+</div>
