--- a/ZTW_2011/app/views/admin/ingredients/show.html.erb
+++ b/ZTW_2011/app/views/admin/ingredients/show.html.erb
@@ -11,5 +11,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_ingredient_path(@ingredient) %> |
-<%= link_to 'Back', ingredients_path %>
+<%= link_to 'Edit', edit_admin_ingredient_path(@ingredient) %> |
+<%= link_to 'Back', admin_ingredients_path %>
