--- a/ZTW_2011/app/views/orders/new.html.erb
+++ b/ZTW_2011/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New order</h1>
 <div class="section" style="padding-top: 10px; text-align: center; font-size: 20px; font-weight: bold;">
-<%= link_to('Next step', :controller => 'orders', :action => 'confirm') %>
+<%= link_to 'Next step', confirm_orders_path %>
 </div>
 <div class="section" style="width: 350px; float: left">
 	<%= render "shared/recipies_menu" %>
