--- a/ZTW_2011/app/views/shared/_login_bar.erb
+++ b/ZTW_2011/app/views/shared/_login_bar.erb
@@ -4,7 +4,7 @@
     <%= controller.logged_user.login %>
     <%= link_to "Logout", "/logout" %>
     <%= link_to "My profile", user_path %>
-    <%= link_to "My orders", user_orders_path %>
+    <%= link_to "My orders", orders_path %>
   <% else %>
     <%= link_to "Login", "/login"%>
     <%= link_to "Register", new_user_path %>
