Linki na stronie admina

--- a/ZTW_2011/app/views/admin/index.erb
+++ b/ZTW_2011/app/views/admin/index.erb
@@ -1,1 +1,6 @@
-<%= "admin index" %>
+<h1>Admin sites</h1>
+<ul style="list-style-type: none">
+  <li><%= link_to "Recipes", admin_recipes_path %></li>
+  <li><%= link_to "Ingredients", admin_ingredients_path %></li>
+  <li><%= link_to "Users", admin_users_path %></li>
+</ul>
