--- a/ZTW_2011/app/views/layouts/admin.html.erb
+++ b/ZTW_2011/app/views/layouts/admin.html.erb
@@ -10,7 +10,7 @@
 		<div id="header">
 			<div id="header_content">
 				<div class="menu">
-				<%= render "shared/menu" %>
+				<%= render "shared/admin_menu" %>
 				</div>
 			</div>
 		</div>
