Wyswietlanie statusu zamowienia, strona My recipes

--- a/ZTW_2011/app/views/admin/index.erb
+++ b/ZTW_2011/app/views/admin/index.erb
@@ -3,22 +3,20 @@
 	<div class="section" style="float: left; padding-top: 5px;">
 			<table class="orders_list" style="width: 100%;">	
 				<thead>
-					<th>First name</th>
 					<th>Surname</th>
 					<th>Address</th>
 					<th>Phone</th>
-					<th>Email</th>
+                                        <th>Price</th>
 				</thead>
 				<tbody>
 					<tr>
-						<td><%= o.firstName %></td>
 						<td><%= o.surname %></td>
 						<td><%= o.address %></td>
 						<td><%= o.phone %></td>
-						<td><%= o.email %></td>
+                                                <td><%= format_price(o.price) %></td>
 						<td>
 							<%= link_to('Details', admin_order_path(o.id)) %>
-							<%= link_to('Finish', admin_order_path(o.id)) %>
+							<%= link_to('Finish', admin_order_path(o.id), :method => 'put') %>
 						</td>
 					</tr>
 				</tbody>
