--- a/ZTW_2011/app/views/admin/orders/show.html.erb
+++ b/ZTW_2011/app/views/admin/orders/show.html.erb
@@ -7,5 +7,5 @@
 	</ul>
 </div>
 <div style="width: 30%; padding: 5px; float: left; border: 1px solid black">
-	<%= link_to('Zrealizowne', '/admin', :class => 'standard_button') %>
+	<%= link_to(@order.status, admin_path, :class => 'standard_button') %>
 </div>
